--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -28,7 +28,7 @@
                 android:background="@drawable/round_corner"
                 android:hint="@string/prompt_full_name"
                 android:inputType="text"
-                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(text.toString(), viewModel.userName, viewModel.password, loginButton)}"
+                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(text.toString(), viewModel.userName, viewModel.password, signUpButton)}"
                 android:padding="@dimen/dimen_16dp"
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.fullName}"
@@ -47,7 +47,7 @@
                 android:hint="@string/prompt_username"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:inputType="text"
-                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, text.toString(), viewModel.password, loginButton)}"
+                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, text.toString(), viewModel.password, signUpButton)}"
                 android:padding="@dimen/dimen_16dp"
                 android:text="@={viewModel.userName}"
                 android:textColorHint="?attr/inputTextColor"
@@ -66,7 +66,7 @@
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, viewModel.userName, text.toString(), loginButton)}"
+                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, viewModel.userName, text.toString(), signUpButton)}"
                 android:padding="@dimen/dimen_16dp"
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
@@ -76,12 +76,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/usernameEt" />
 
             <com.example.mobile.design.lib.CustomizableGenericButton
-                android:id="@+id/loginButton"
+                android:id="@+id/signUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_40dp"
                 android:layout_marginBottom="@dimen/dimen_40dp"
-                android:onClick="@{() -> viewModel.registerUser(loginButton)}"
+                android:onClick="@{() -> viewModel.registerUser(signUpButton)}"
                 app:buttonState="disabled"
                 app:buttonTitleText="Register"
                 app:buttonTitleTextColor="@color/white"
