--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,6 +28,7 @@
                 android:hint="@string/prompt_username"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:inputType="text"
+                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(text.toString(), viewModel.password, loginButton)}"
                 android:padding="@dimen/dimen_16dp"
                 android:text="@={viewModel.userName}"
                 android:textColorHint="?attr/inputTextColor"
@@ -46,6 +47,7 @@
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
+                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.userName, text.toString(), loginButton)}"
                 android:padding="@dimen/dimen_16dp"
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
@@ -59,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
-                android:onClick="@{() -> viewModel.loginUser()}"
+                android:onClick="@{() -> viewModel.loginUser(loginButton)}"
                 app:buttonState="disabled"
                 app:buttonTitleText="Login"
                 app:buttonTitleTextColor="@color/white"
