--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_16dp"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:padding="@dimen/dimen_16dp">
 
             <EditText
                 android:id="@+id/fullNameEt"
