--- a/mobile-design-library/src/main/res/values/mdl_colors.xml
+++ b/mobile-design-library/src/main/res/values/mdl_colors.xml
@@ -12,4 +12,8 @@
     <color name="enabledColor">#1137F8</color>
     <color name="pressedColor">#FFEB3B</color>
     <color name="selectedColor">#009688</color>
+
+    <color name="colorAccent">#3F51B5</color>
+    <color name="colorPrimary">#1c90ec</color>
+    <color name="colorPrimaryDark">#148eac</color>
 </resources>
