--- a/mobile-design-library/src/main/res/values/mdl_dimens.xml
+++ b/mobile-design-library/src/main/res/values/mdl_dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
     <dimen name="dimen_4dp">4dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
